--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,17 @@
+cachetools==3.1.1
+certifi==2019.6.16
+chardet==3.0.4
+google-api-python-client==1.7.11
+google-auth==1.6.3
+google-auth-httplib2==0.0.3
+httplib2==0.13.1
+idna==2.8
+oauth2client==4.1.3
 pkg-resources==0.0.0
+pyasn1==0.4.7
+pyasn1-modules==0.2.6
+requests==2.22.0
+rsa==4.0
+six==1.12.0
+uritemplate==3.0.0
+urllib3==1.25.3
